--- a/impressum.html
+++ b/impressum.html
@@ -27,7 +27,7 @@ class="ie9"><![endif]--><!--[if (gt IE 9)|!(IE)]><!--><body><!--<![endif]-->
   <a href="index.html">startseite</a>
   
   Impressum</h2></div></div></div></div><div class="container slot-two-columns"><div class="row"><div class="col-xs-12 col-md-8">
-<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Postanschrift:</strong><br> Hattersheimer Str. 6, 65719 Hofheim am Taunus <br> <br> info@kammerjaeger-bast.de</p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Telefon:</strong> XXX<br> <strong>Fax:</strong> XXX<br> <strong>E-Mail:</strong> <a href="mailto:info@rohr-spezialfahrzeuge.com">info@kammerjaeger-bast.de</a></p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Geschäftsführer:</strong>  Jurij Bast
+<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Postanschrift:</strong><br> Hattersheimer Str. 6, 65719 Hofheim am Taunus <br> <br> info@kammerjaeger-bast.de</p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Telefon:</strong> 015792643846<br> <strong>Fax:</strong> XXX<br> <strong>E-Mail:</strong> <a href="mailto:info@kammerjaeger-bast.de">info@kammerjaeger-bast.de</a></p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Geschäftsführer:</strong>  Jurij Bast
   
   
   
